# audiocore

./: .dockerignore  .gitignore  .gitleaks.toml  .gitmodules  AGENTS.md  CLAUDE.md  CMakeLists.txt  Dockerfile  Dockerfile.cpu  GAPS.md  LICENSE  README.md
.github/workflows/: ci.yml  gitleaks.yml
Testing/: GAP_TRACKER.md  ace-step-status.md
comfyui/: __init__.py  core.py  nodes.py
comfyui/engines/: __init__.py  moss_sfx_v2.py  qwen3_tts.py
config/: secrets.env.example
docker/: entrypoint.sh  server.example.json
docs/: ACE-STEP-DETOKENIZER-GAP.md  ACE-STEP-REFERENCE-COMPARISON.md  ARCHITECTURE.md  CODEC_PORTS.md  GGUF_FORMAT.md  MODELS-SUPPORTED.md  MOSS-SFX-V2-PLAN.md  ONNX_ROADMAP.md  PCA-VOICE-ANALYSIS.md  PROFILING.md  SCRAGVAE-VERIFICATION.md
docs/qwen3-voice-embeddings/: API.md  ARCHITECTURE.md  EMBEDDING_FLOW.md  GGUF_LAYOUT.md  INFERENCE.md  README.md  STUDY_faster-qwen3-tts.md
examples/: server.json
include/audiocore/framework/audio/: dsp.h
include/audiocore/framework/core/: backend.h  session.h
include/audiocore/framework/ggml/: backend_helper.h
include/audiocore/framework/io/: gguf_reader.h  gguf_reader_ext.h  mp3_encoder.h  tensor_storage.h  wav.h  weight_loader.h
include/audiocore/framework/runtime/: discovery.h  manifest.h  model.h  registry.h  tasks.h
include/audiocore/framework/sampling/: philox.h  sampler.h
include/audiocore/models/: kokoro_tts.h  pocket_tts.h  silero_vad.h
include/audiocore/models/ace_step/: detokenizer_runner.h  dit_runner.h  family.h  vae_runner.h
include/audiocore/models/kokoro/: family.h
include/audiocore/models/moss_sfx_v2/: dit_runner.h  family.h  vae_runner.h
include/audiocore/models/moss_tts/: codec.h  delay_state.h  family.h  projection.h  sampler.h
include/audiocore/models/qwen3/: runner.h
include/audiocore/models/qwen3_tts/: codec.h  family.h  predictor_runner.h  speaker_encoder.h  talker_runner.h
include/audiocore/models/zonos2/: family.h
include/audiocore/server/: acestep_proxy.h  qwen3tts_proxy.h  server.h
memory/: MEMORY.md  ace-step-pipeline.md
models/: manifest.json
moss_audio_tokenizer/: __init__.py
moss_audio_tokenizer/onnx/: __init__.py
patches/: README.md
patches/llama.cpp/: 0001-ggml-max-name-128.patch  0002-qwen3-k-gqa-tensor-dim.patch
scripts/: apply-submodule-patches.sh  deploy_tts.sh  dump_mse2_tensors.py  fetch_models.sh  install-git-hooks.sh  pca_voices.py  reference_config.yaml  run_reference.sh  run_webapp.sh  tts_server_remote.py  voice_studio.py
scripts/hooks/: pre-commit  pre-push
src/cli/: main.cpp
src/framework/audio/: dsp.cpp
src/framework/core/: backend.cpp  session.cpp
src/framework/io/: gguf_reader.cpp  gguf_reader_ext.cpp  mp3_encoder.cpp  wav.cpp  weight_loader.cpp
src/framework/models/qwen3/: runner.cpp
src/framework/runtime/: discovery.cpp  manifest.cpp  registry.cpp
src/framework/sampling/: sampler.cpp
src/models/ace_step/: README.md  detokenizer_runner.cpp  dit_runner.cpp  loader.cpp  session.cpp  vae_runner.cpp
src/models/kokoro/: loader.cpp  session.cpp  tokenizer.cpp  tokenizer.h  vocab_data.h
src/models/kokoro_tts/: kokoro_model.cpp  loader.cpp  phonemizer.cpp  session.cpp  tokenizer_compat.cpp  tts_model_compat.cpp
src/models/kokoro_tts/internal/src/: tokenizer.cpp  tokenizer.h  tts_model.cpp  tts_model.h  util.cpp  util.h
src/models/kokoro_tts/internal/src/models/: loaders.cpp
src/models/kokoro_tts/internal/src/models/kokoro/: model.cpp  model.h  phonemizer.cpp
src/models/moss_sfx_v2/: dit_runner.cpp  loader.cpp  session.cpp  vae_runner.cpp
src/models/moss_tts/: README.md  codec.cpp  delay_state.cpp  loader.cpp  projection.cpp  sampler.cpp  session.cpp
src/models/qwen3_tts/: codec.cpp  loader.cpp  predictor_runner.cpp  session.cpp  speaker_encoder.cpp  talker_runner.cpp
src/models/silero_vad/: README.md  loader.cpp  runtime.cpp  runtime.h  session.cpp
src/models/zonos2/: loader.cpp  session.cpp
src/python/: audiocore_bindings.cpp
src/server/: acestep_proxy.cpp  main.cpp  qwen3tts_proxy.cpp  server.cpp
tests/: CMakeLists.txt  e2e_common.h  synthetic_gguf.cpp  synthetic_gguf.h  test_acestep_e2e.cpp  test_acestep_units.cpp  test_convert_acestep.cpp  test_convt1d_smoke.cpp  test_framework.h  test_full_dit.cpp  test_gguf_dump.cpp  test_gguf_reader.cpp  test_kokoro_e2e.cpp  test_moss_e2e.cpp  test_moss_modes.cpp  test_moss_units.cpp  test_moss_voice_clone_e2e.cpp  test_mse2_e2e.cpp  test_mse2_parity.cpp  test_projection.cpp  test_qwen3_voice_e2e.cpp  test_qwen3tts_e2e.cpp  test_qwen3tts_proxy_e2e.py  test_registry.cpp  test_sampler.cpp  test_server_e2e.cpp  test_silero_vad.cpp  test_speaker_encoder_units.cpp  test_vae_only.cpp  test_zonos2_e2e.cpp
tests/comfyui/: README.md  conftest.py  mimo_judge.py  pytest.ini  test_audio_quality_mimo.py  test_auto_fetch.py  test_inference.py  test_lifecycle.py  test_model_management.py
tests/comfyui/workflows/: family_info.json  load_moss_sfx.json  load_moss_tts.json  load_then_unload.json  music_ace_step.json  qwen3_tts_embed.json  qwen3_tts_multilingual.json  qwen3_tts_voicedesign.json  sfx_moss_sfx_v2.json  tts_moss_tts.json  tts_qwen3_tts.json
tools/: audio_vlm.py  audio_vlm_test.py  convert_acestep.cpp  convert_acestep_gguf.py  convert_ecapa.cpp  convert_moss_tts.py  convert_mse2.cpp  convert_mse2_te.py  convert_qwen3tts.cpp  convert_safetensors_to_gguf.py  convert_silero_vad.py  convert_vae.py  inspect_gguf.cpp  qwen_voice.cpp
webapp/: audio_server.py
webapp/public/: app.js  index.html  style.css
